Prevent scrolling on mobile. Fixes #27

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -128,6 +128,7 @@ header {
     width: 100%;
     position: relative;
     height: 100%;
+    overflow: hidden;
 }
 
 svg {
